# PEMutator

./: .gitignore  Cargo.toml  README.md
crates/asm-mutator-core/: Cargo.toml
crates/asm-mutator-core/src/: lib.rs  mutator.rs
crates/asm-mutator-core/src/arch/: x64.rs  x86.rs
crates/asm-mutator-core/src/assembly/: common.rs  mod.rs  x64.rs  x86.rs
crates/asm-mutator-core/src/encoder/: mod.rs  x86.rs
crates/asm-mutator-core/src/ir/: mod.rs  x86.rs
crates/mutator-bolts/: Cargo.toml
crates/mutator-bolts/src/: error.rs  lib.rs  mutator.rs
crates/pe-mutator-capi/: Cargo.toml  cbindgen.toml  generate-bindings.sh
crates/pe-mutator-capi/include/: pe_mutator.h
crates/pe-mutator-capi/src/: lib.rs  mutator.rs
crates/pe-mutator-cli/: Cargo.toml
crates/pe-mutator-cli/src/: main.rs
crates/pe-mutator-core/: Cargo.toml
crates/pe-mutator-core/src/: lib.rs  mutator.rs  utils.rs
crates/pe-mutator-core/src/arch/: mod.rs
crates/pe-mutator-core/src/assembly/: common.rs  mod.rs  x64.rs  x86.rs
crates/pe-mutator-core/src/core/: io.rs  mod.rs  mutator.rs  rng.rs
crates/pe-mutator-core/src/encoder/: common.rs  error.rs  x64.rs  x86.rs
crates/pe-mutator-core/src/ir/: x64.rs  x86.rs
crates/pe-mutator-core/src/mutations/: budget.rs  helper.rs  mod.rs  mutations.rs  rva.rs  shared.rs
crates/pe-mutator-core/tests/: encoder_memory_operands.rs  entry_point_mutator.rs  executable_chunk_mutator.rs  pe_data_directories.rs  pe_parser.rs
crates/pe-mutator-libafl/: Cargo.toml
crates/pe-mutator-libafl/src/: lib.rs  mutator.rs  pe_mutator.rs  rng_wrapper.rs
(+36 files in other folders)
